--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+}
+
 #app {
   max-width: 1200px;
   margin: auto;
